fix(ui): fix unexpected line breaks in smaller screen

--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --nav-height: 48px;
+  --nav-height: 42px;
 }
 
 :root {
